adaptación para tryton 3.0

--- a/trytond.conf
+++ b/trytond.conf
@@ -87,4 +87,4 @@ logfile = /home/tryton/runtime/tryton.log
 language = en_US
 
 # Timezone of the server
-# timezone = False
+timezone = America/Argentina/Buenos_Aires
