--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ PyWebDAV==0.9.8
 cdecimal==2.3
 lxml==3.2.1
 polib==1.0.3
-psycopg2==2.5
+psycopg2==2.5.1
 python-dateutil==2.1
-pytz==2013b
-relatorio==0.5.7
+pytz==2013.8
+python-sql==0.2
+relatorio==0.6.0
 six==1.3.0
-trytond==2.8.0
+trytond==3.0.0
 wsgiref==0.1.2
-proteus==2.8.0
+proteus==3.0.0
 vatnumber==1.1
